--- a/src/Toggler.css
+++ b/src/Toggler.css
@@ -2,6 +2,20 @@ div.toggler {
   position: fixed;
   bottom: 40px;
   left: 40px;
-  background-color: #fff;
   z-index: 1;
+}
+
+div.toggler button {
+  background-color: #fff;
+  appearance: none;
+  border: none;
+  font-family: inherit;
+  padding: 5px 10px;
+  margin: 0 1px 0 0;
+  color: #999999;
+  outline: none;
+}
+
+div.toggler button.selected {
+  color: #000;
 }
